--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>unrealest</title>
+<title>UNREAL'S PORTFOLIO</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -45,26 +45,27 @@ html {
   }
 }
 
-.hr {
-  background-color: transparent; 
-  color: white;
+.fixedhr:after {
+    content: " ";
+    display: block;
+    border-bottom: 0.5px solid #9E9E9E;
 }
 
 .btn:hover {opacity: 1}
-body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
-.w3-bar,h1,button {font-family: "Montserrat", sans-serif}
+body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif; color: white;}
+.w3-bar,h1,button {font-family: "Montserrat", sans-serif; color: white;}
 </style>
 </head>
 <body>
 
 <!-- Header -->
 <header class="w3-container w3-center" style="padding:150px 16px; background-color: #262a2b;">
-  <h1 class="animate__animated animate__bounceInRight w3-margin w3-jumbo" style="color: #4672fe;">UNREAL'S REALLY BAD WEBSITE</h1>
+  <h1 class="animate__animated animate__bounceInRight w3-margin w3-jumbo" style="color: #4672fe;">UNREAL'S PORTFOLIO</h1>
   <p class="animate__animated animate__bounceInRight w3-xlarge">I'm a car enthusiast, programmer and game designer. If you'd like to know more, click that button!</p>
   <a href="#about" class="btn animate__animated animate__bounceInRight w3-button w3-padding-large w3-large w3-margin-top" style="background-color: #2a165e;">MORE ABOUT ME</a>
 </header>
 
-<hr>
+<div class="fixedhr"></div>
 
 <!-- First Grid -->
 <div class="w3-row-padding w3-padding-64 w3-container" style="background-color: #101212;" id="about">
@@ -77,7 +78,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
   </div>
 </div>
 
-<hr>
+<div class="fixedhr"></div>
 
 <!-- Second Grid -->
 <div class="w3-row-padding w3-padding-64 w3-container" style="background-color: #101212;">
@@ -89,7 +90,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
   </div>
 </div>
 
-<hr>
+<div class="fixedhr"></div>
 
 <!-- Footer -->
 <footer class="w3-container w3-padding-12 w3-center" style="background-color: #2a165e;">  
