--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif; color: white;}
   <div class="w3-content">
     <div class="w3-twothird">
       <h1>Contact</h1>
-      <h5>You can contact me via discord. My username and tag is: unreal#6163 :)</h5>
+      <h5>I no longer have a public discord account.</h5>
     </div>
   </div>
 </div>
