--- a/index.html
+++ b/index.html
@@ -1,103 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-<title>UNREAL'S PORTFOLIO</title>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<link href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined" rel="stylesheet">
-  <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
-  />
-<style>
-html {
-  scroll-behavior: smooth;
-}
-.btn {
-  border: none;
-  opacity: 0.6;
-  transition: 0.3s;
-}
-
-.rainbow {
-  animation: colorRotate 6s linear 0s infinite;
-}
-
-@keyframes colorRotate {
-  from {
-    color: #6666ff;
-  }
-  10% {
-    color: #0099ff;
-  }
-  50% {
-    color: #00ff00;
-  }
-  75% {
-    color: #ff3399;
-  }
-  100% {
-    color: #6666ff;
-  }
-}
-
-.fixedhr:after {
-    content: " ";
-    display: block;
-    border-bottom: 0.5px solid #9E9E9E;
-}
-
-.btn:hover {opacity: 1}
-body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif; color: white;}
-.w3-bar,h1,button {font-family: "Montserrat", sans-serif; color: white;}
-</style>
-</head>
-<body>
-
-<!-- Header -->
-<header class="w3-container w3-center" style="padding:150px 16px; background-color: #262a2b;">
-  <h1 class="animate__animated animate__bounceInRight w3-margin w3-jumbo" style="color: #4672fe;">UNREAL'S PORTFOLIO</h1>
-  <p class="animate__animated animate__bounceInRight w3-xlarge">I'm a car enthusiast, programmer and game designer. If you'd like to know more, click that button!</p>
-  <a href="#about" class="btn animate__animated animate__bounceInRight w3-button w3-padding-large w3-large w3-margin-top" style="background-color: #2a165e;">MORE ABOUT ME</a>
-</header>
-
-<div class="fixedhr"></div>
-
-<!-- First Grid -->
-<div class="w3-row-padding w3-padding-64 w3-container" style="background-color: #101212;" id="about">
-  <div class="w3-content">
-    <div class="w3-twothird">
-      <h1>Who are you?</h1>
-      <h5 class="w3-padding-32">I'm mainly a programmer who enjoys making games as a hobby. I have a huge passion for cars. I also make discord bots and websites, sometimes for professional use too.</h5>
-      <h5 class="w3-padding-32">I currently know how to code in HTML5, CSS, Python, Lua, and Javascript.</h5>
-    </div>
-  </div>
-</div>
-
-<div class="fixedhr"></div>
-
-<!-- Second Grid -->
-<div class="w3-row-padding w3-padding-64 w3-container" style="background-color: #101212;">
-  <div class="w3-content">
-    <div class="w3-twothird">
-      <h1>Contact</h1>
-      <h5>I no longer have a public discord account.</h5>
-    </div>
-  </div>
-</div>
-
-<div class="fixedhr"></div>
-
-<!-- Footer -->
-<footer class="w3-container w3-padding-12 w3-center" style="background-color: #2a165e;">  
-  <div class="w3-xlarge w3-padding-32">
-    <i class="btn fa fa-youtube w3-hover-opacity"></i>
- </div>
-</footer>
-
-</body>
-</html>
+<center>
+  the site is being redone
+  <br>
+  <img src="Amogbob.png" alt="amogus">
+</center>
